--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>CodePen - Web Audio Visualizer w/ MIDI</title>
   <script>
 let vis;
-</script><link rel="stylesheet" href="./style.css">
+</script><link rel="stylesheet" href="./style.scss">
 
 </head>
 <body>
